MiniJava/_build/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On CLASS shift to state 1
-- On program shift to state 96
-- On main_class shift to state 97
## Reductions:

State 1:
## Known stack suffix:
## CLASS
## LR(1) items:
main_class -> CLASS . IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
main_class -> CLASS IDENT . LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACE shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## CLASS IDENT LBRACE
## LR(1) items:
main_class -> CLASS IDENT LBRACE . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On PUBLIC shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On STATIC shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On VOID shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On MAIN shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LPAREN shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN . STRING LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On STRING shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING . LBRACKET RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACKET shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET . RBRACKET IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On RBRACKET shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET . IDENT RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On IDENT shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT . RPAREN LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On RPAREN shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN . LBRACE instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On LBRACE shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE
## LR(1) items:
main_class -> CLASS IDENT LBRACE PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET IDENT RPAREN LBRACE . instruction RBRACE RBRACE [ EOF CLASS ]
## Transitions:
-- On WHILE shift to state 15
-- On SYSO shift to state 64
-- On LBRACE shift to state 69
-- On IF shift to state 70
-- On IDENT shift to state 74
-- On instruction shift to state 93
-- On block shift to state 87
## Reductions:

State 15:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAREN expression RPAREN instruction [ WHILE SYSO RETURN RBRACE LBRACE IF IDENT ELSE ]
## Transitions:
-- On LPAREN shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## WHILE LPAREN
## LR(1) items:
instruction -> WHILE LPAREN . expression RPAREN instruction [ WHILE SYSO RETURN RBRACE LBRACE IF IDENT ELSE ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 62
## Reductions:

State 17:
## Known stack suffix:
## THIS
## LR(1) items:
raw_expression -> THIS . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> THIS

State 18:
## Known stack suffix:
## NOT
## LR(1) items:
raw_expression -> NOT . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 61
## Reductions:

State 19:
## Known stack suffix:
## NEW
## LR(1) items:
raw_expression -> NEW . INTEGER LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> NEW . IDENT LPAREN RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On INTEGER shift to state 20
-- On IDENT shift to state 58
## Reductions:

State 20:
## Known stack suffix:
## NEW INTEGER
## LR(1) items:
raw_expression -> NEW INTEGER . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On LBRACKET shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## NEW INTEGER LBRACKET
## LR(1) items:
raw_expression -> NEW INTEGER LBRACKET . expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 56
## Reductions:

State 22:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . expression RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 27
## Reductions:

State 23:
## Known stack suffix:
## INT_CONST
## LR(1) items:
raw_expression -> INT_CONST . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> INT_CONST

State 24:
## Known stack suffix:
## IDENT
## LR(1) items:
raw_expression -> IDENT . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> IDENT

State 25:
## Known stack suffix:
## BOOL_CONST
## LR(1) items:
raw_expression -> BOOL_CONST . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> BOOL_CONST

State 26:
## Known stack suffix:
## raw_expression
## LR(1) items:
expression -> raw_expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production expression -> raw_expression

State 27:
## Known stack suffix:
## LPAREN expression
## LR(1) items:
expression -> LPAREN expression . RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . PLUS expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . MINUS expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . TIMES expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . LT expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . AND expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . GT expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . EGAL expression [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . DOT LENGTH [ TIMES RPAREN PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
## Transitions:
-- On TIMES shift to state 28
-- On RPAREN shift to state 55
-- On PLUS shift to state 33
-- On MINUS shift to state 43
-- On LT shift to state 45
-- On LBRACKET shift to state 30
-- On GT shift to state 47
-- On EGAL shift to state 49
-- On DOT shift to state 35
-- On AND shift to state 53
## Reductions:

State 28:
## Known stack suffix:
## expression TIMES
## LR(1) items:
raw_expression -> expression TIMES . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## expression TIMES expression
## LR(1) items:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression TIMES expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . GT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . EGAL expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On LBRACKET shift to state 30
-- On DOT shift to state 35
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT GT EGAL COMMA AND
--   reduce production raw_expression -> expression TIMES expression

State 30:
## Known stack suffix:
## expression LBRACKET
## LR(1) items:
raw_expression -> expression LBRACKET . expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## expression LBRACKET expression
## LR(1) items:
raw_expression -> expression . PLUS expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . MINUS expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . TIMES expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . LT expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . AND expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . GT expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . EGAL expression [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
raw_expression -> expression LBRACKET expression . RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT AND ]
## Transitions:
-- On TIMES shift to state 28
-- On RBRACKET shift to state 32
-- On PLUS shift to state 33
-- On MINUS shift to state 43
-- On LT shift to state 45
-- On LBRACKET shift to state 30
-- On GT shift to state 47
-- On EGAL shift to state 49
-- On DOT shift to state 35
-- On AND shift to state 53
## Reductions:

State 32:
## Known stack suffix:
## expression LBRACKET expression RBRACKET
## LR(1) items:
raw_expression -> expression LBRACKET expression RBRACKET . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> expression LBRACKET expression RBRACKET

State 33:
## Known stack suffix:
## expression PLUS
## LR(1) items:
raw_expression -> expression PLUS . expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On raw_expression shift to state 26
-- On expression shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## expression PLUS expression
## LR(1) items:
raw_expression -> expression . PLUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression PLUS expression . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . MINUS expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . TIMES expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . LT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . AND expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . GT expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . EGAL expression [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . LBRACKET expression RBRACKET [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression . DOT LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On TIMES shift to state 28
-- On LBRACKET shift to state 30
-- On DOT shift to state 35
## Reductions:
-- On SEMICOLON RPAREN RBRACKET PLUS MINUS LT GT EGAL COMMA AND
--   reduce production raw_expression -> expression PLUS expression

State 35:
## Known stack suffix:
## expression DOT
## LR(1) items:
raw_expression -> expression DOT . IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
raw_expression -> expression DOT . LENGTH [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On LENGTH shift to state 36
-- On IDENT shift to state 37
## Reductions:

State 36:
## Known stack suffix:
## expression DOT LENGTH
## LR(1) items:
raw_expression -> expression DOT LENGTH . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> expression DOT LENGTH

State 37:
## Known stack suffix:
## expression DOT IDENT
## LR(1) items:
raw_expression -> expression DOT IDENT . LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On LPAREN shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## expression DOT IDENT LPAREN
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN . loption(separated_nonempty_list(COMMA,expression)) RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On THIS shift to state 17
-- On NOT shift to state 18
-- On NEW shift to state 19
-- On LPAREN shift to state 22
-- On INT_CONST shift to state 23
-- On IDENT shift to state 24
-- On BOOL_CONST shift to state 25
-- On separated_nonempty_list(COMMA,expression) shift to state 39
-- On raw_expression shift to state 26
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 40
-- On expression shift to state 42
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 39:
## Known stack suffix:
## separated_nonempty_list(COMMA,expression)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression)

State 40:
## Known stack suffix:
## expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) . RPAREN [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
-- On RPAREN shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN
## LR(1) items:
raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN . [ TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND ]
## Transitions:
## Reductions:
-- On TIMES SEMICOLON RPAREN RBRACKET PLUS MINUS LT LBRACKET GT EGAL DOT COMMA AND
--   reduce production raw_expression -> expression DOT IDENT LPAREN loption(separated_nonempty_list(COMMA,expression)) RPAREN
